test/dryrun/multiple/multiple_mustnothave/input.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: one
  labels:
    test.dev/foo: ismatch
spec:
  ingressClassName: test
  rules:
    - http: 
       paths: 
         - path: /testpath
           pathType: Prefix
           backend:
            service:
              name: test
              port:
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: two
  labels:
    test.dev/foo: ismatch
spec:
  ingressClassName: wrong-name
  rules:
    - http: 
       paths: 
         - path: /testpath
           pathType: Prefix
           backend:
            service:
              name: test
              port:
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: three
spec:
  ingressClassName: wrong-name
  rules:
    - http: 
       paths: 
         - path: /testpath
           pathType: Prefix
           backend:
            service:
              name: test
              port:
                number: 801
