test/dryrun/multiple/multiple_mustnothave/output.txt
# Status compare:
.compliancyDetails[0] matches
.compliancyDetails matches
.compliant: 'NonCompliant' does match 'NonCompliant'
.relatedObjects[0] matches
.relatedObjects[1] matches
.relatedObjects matches
 Expected status matches the actual status

# Diffs:
networking.k8s.io/v1 Ingress default/one:

networking.k8s.io/v1 Ingress default/two:

# Compliance messages:
NonCompliant; violation - ingresses [one, two] found in namespace default
